deployment/prod/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deploy-backend
  name: deploy-backend
spec:
  #replicas: 1
  selector:
    matchLabels:
      app: deploy-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploy-backend
    spec:
      containers:
      - image: registry.gitlab.com/somerek/music_page/backend:latest
        name: backend
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 400m
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        imagePullPolicy: Always
status: {}
