deployment/prod/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy-frontend
  name: service-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: deploy-frontend
  type: ClusterIP
status:
  loadBalancer: {}
